# rust_ffi_examples

./: .gitignore  Cargo.toml  Readme.md
ffi_01_basic_snappy_binding/: Cargo.toml  build.rs
ffi_01_basic_snappy_binding/src/: main.rs
ffi_02_basic_snappy_binding/: Cargo.toml
ffi_02_basic_snappy_binding/src/: main.rs
ffi_03_calling_rust_from_c/: Cargo.toml
ffi_03_calling_rust_from_c/resources/: call_rust.c
ffi_03_calling_rust_from_c/src/: lib.rs
ffi_04_rust_callbacks/: .gitignore  Cargo.toml
ffi_04_rust_callbacks/resources/: call_rust.c
ffi_04_rust_callbacks/src/: lib.rs
ffi_05_rust_callbacks_02/: Cargo.toml  build.rs
ffi_05_rust_callbacks_02/resources/: extlib.c
ffi_05_rust_callbacks_02/src/: main.rs
ffi_06_foreign_globals/: Cargo.toml  build.rs
ffi_06_foreign_globals/src/: main.rs
ffi_07_variadic_functions/: Cargo.toml  build.rs
ffi_07_variadic_functions/resources/: extlib.c
ffi_07_variadic_functions/src/: main.rs
ffi_08_opaque_structs/: Cargo.toml
ffi_08_opaque_structs/resources/: api_1.c
ffi_08_opaque_structs/src/: lib.rs
ffi_09_opaque_structs_02/: .gitignore  Cargo.toml  build.rs
ffi_09_opaque_structs_02/resources/: CMakeLists.txt  mylib.c  mylib.h
ffi_09_opaque_structs_02/src/: main.rs
ffi_10_safer_ffi_01/: Cargo.toml
ffi_10_safer_ffi_01/resources/: main.c
ffi_10_safer_ffi_01/src/: lib.rs
